#5 Fix:  Changed item Active bg color on smaller screens, Changes within media query

--- a/style/base.css
+++ b/style/base.css
@@ -5,10 +5,9 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--color-accent);
   transition: color 0.2s;
 }
 
 a:hover {
-  color: var(--color-body-light);
+  color: #000;
 }
