--- a/style/components/sidebar.css
+++ b/style/components/sidebar.css
@@ -1,17 +1,16 @@
 .sidebar {
   border-right: 1px solid var(--color-border);
   min-height: 100vh;
-  padding: 0.9rem 1.6rem;
 }
 
 .sidebar .logo {
-  width: 6.4rem;
-  margin-bottom: 0.5rem;
+  width: 9.5rem;
+  padding: 0.9rem 1.6rem 0.7rem;
 }
 
-.sidebar .logo-only {
-  width: 1.7rem;
-  opacity: 0;
+.sidebar .icon-only {
+  width: 1.6rem;
+  display: none;
 }
 
 .sidebar .nav {
@@ -22,30 +21,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1.6rem;
-  margin-left: -1.6rem;
-  margin-right: -1.6rem;
+  position: relative;
+  padding: 1rem 1.7rem;
   color: var(--color-heading);
-  cursor: pointer;
+  transition: background-color 0.2s;
 }
 
 .sidebar .nav .item:hover {
-  color: var(--color-body-light);
+  background-color: var(--color-bg);
 }
 
-.sidebar .nav .item div {
+.sidebar .nav .item .category {
   display: flex;
   align-items: center;
   gap: 0.7rem;
 }
 
-.sidebar .nav .item .heading {
-  font-size: 0.95rem;
-}
-
 .sidebar .nav .item.active {
   background-color: var(--color-bg);
-  position: relative;
 }
 
 .sidebar .nav .item.active::before {
@@ -58,25 +51,33 @@
 }
 
 @media (max-width: 992px) {
-  .sidebar .heading,
+  .sidebar .link-txt,
   .sidebar .icon.arrow,
-  .sidebar .notification,
+  .sidebar .notification-badge,
   .sidebar .logo,
   .sidebar .nav .item.active::before {
     display: none;
   }
 
-  .sidebar .logo-only {
-    opacity: 1;
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1.3rem;
+    gap: 1rem;
   }
 
   .sidebar .nav .item {
-    padding: 1rem 1.2rem;
-    margin-left: -0.8rem;
-    margin-right: -0.8rem;
+    border-radius: 15px;
+    padding-left: 1.2rem;
+    padding-right: 0.8rem;
   }
 
   .sidebar .nav .item.active {
-    border-radius: 15px;
+    background-color: var(--color-accent);
+  }
+
+  .sidebar .icon-only {
+    display: block;
   }
 }
